@@ -2,6 +2,7 @@
   * fixing detection of CK installation even when ck is soft linked
   * changing remote-ck repo URL pointing to cknowledge.org 
     (after moving personal CK server to Azure cloud)
+  * adding support for basic http authentication for remote repositories
 
 * V1.6.15
   * adding mode to skip tmp files/directories when downloading entry
